--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,12 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+
+    implementation 'net.zetetic:sqlcipher-android:4.6.0@aar'
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+
     testImplementation libs.junit
+
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
